--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="dane-programisty"></div>
 
 
-    <script src="../jquery-3.4.1.min.js"></script>
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
